# SolTix

./: .gitignore  Anchor.toml  Cargo.toml  package.json
app/: package-lock.json  package.json
app/src/app/: layout.tsx  page.tsx
app/src/app/events/: page.tsx
app/src/app/events/[id]/: page.tsx
app/src/app/organizations/: page.tsx
app/src/app/organizations/[id]/: page.tsx
app/src/app/organizations/register/: page.tsx
app/src/components/events/: EventCarousel.tsx
app/src/components/forms/: OrganizationForm.tsx
app/src/components/organizations/: OrganizationGrid.tsx
app/src/components/providers/: WalletProvider.tsx
app/src/components/tickets/: TicketCard.tsx
app/src/components/ui/: WalletConnect.tsx
app/src/hooks/: useWalletConnection.ts
app/src/services/: eventService.ts  organizationService.ts  ticketService.ts
app/src/utils/: ipfs.ts  mockData.ts
blockchain/: Anchor.toml  Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/events/[id]/: page.tsx
frontend/src/app/events/past/: page.tsx
frontend/src/app/organizations/: page.tsx
frontend/src/app/organizations/[id]/: page.tsx
frontend/src/app/organizations/register/: page.tsx
frontend/src/app/tickets/: page.tsx
frontend/src/components/events/: EventGrid.tsx
frontend/src/components/forms/: OrganizationForm.tsx
frontend/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
frontend/src/components/organizations/: OrganizationGrid.tsx
frontend/src/contexts/: WalletContextProvider.tsx
frontend/src/idl/: event-idl.ts  organization-idl.ts  registry-idl.ts
frontend/src/services/: eventService.ts  organizationService.ts  ticketService.ts
frontend/src/utils/: ipfs.ts  programUtils.ts
programs/: Anchor.toml
programs/soltix-event/: Cargo.toml
programs/soltix-event/src/: errors.rs  lib.rs  state.rs
programs/soltix-event/src/instructions/: initialize.rs  mint_ticket.rs  mod.rs
programs/soltix-organization/: Cargo.toml
programs/soltix-organization/src/: errors.rs  lib.rs  state.rs
programs/soltix-organization/src/instructions/: create_event.rs  initialize.rs  update_metadata.rs
programs/soltix-registry/: Cargo.toml
programs/soltix-registry/src/: errors.rs  lib.rs  state.rs
programs/soltix-registry/src/instructions/: initialize.rs  mod.rs  register_organization.rs  update_event_status.rs
tests/: event.t.ts  organization.t.ts  registry.t.ts  sol-tix.ts
