[workspace]
members = [
  "programs/soltix-event",
  "programs/soltix-organization",
  "programs/soltix-registry"
]
resolver = "2"

# Instead of patching, we'll use a workspace-level dependency
[workspace.dependencies]
solana-program = "=1.16.15"
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
spl-token = "=3.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1