[package]
name = "soltix-event"
version = "0.1.0"
description = "Event program for SolTix"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "soltix_event"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
solana-program = "2.1.21"
anchor-spl = "0.31.1"
mpl-token-metadata = { version = "4.0.0", features = ["no-entrypoint"] }
soltix-organization = { path = "../soltix-organization", features = ["cpi"] }