[package]
name = "soltix-event"
version = "0.1.0"
description = "Event program for SolTix"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soltix_event"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
solana-program = "=1.16.15"