[package]
name = "soltix-organization"
version = "0.1.0"
description = "Organization program for SolTix"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "soltix_organization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
solana-program = "2.1.21"
soltix-registry = { path = "../soltix-registry", features = ["cpi"] }