[package]
name = "soltix-organization"
version = "0.1.0"
description = "Organization program for SolTix"
edition = "2021"  # Changed from 2024

[lib]
crate-type = ["cdylib", "lib"]
name = "soltix_organization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
solana-program = "=1.16.15"  # Compatible version for Anchor 0.29
soltix-registry = { path = "../soltix-registry", features = ["cpi"] }