[package]
name = "soltix-registry"
version = "0.1.0"
description = "Main registry program for SolTix"
edition = "2021"  # Changed from 2024

[lib]
crate-type = ["cdylib", "lib"]
name = "soltix_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
solana-program = "=1.16.15"  # Compatible version for Anchor 0.29